--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.context-path=/nuclear
 
+#mybatis配置
+mybatis.mapper-locations=classpath*:mapper/*Mapper.xml  
+mybatis.type-aliases-package=com.whu.cs.nuclear.platform.pojo
+
+#druid连接池配置
+spring.datasource.url=jdbc:mysql://localhost:3306/LOER_REPORT?characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+
+
+spring.datasource.druid.initial-size=10
+spring.datasource.druid.max-active=20
+spring.datasource.druid.min-idle=5
