--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 mybatis.type-aliases-package=com.whu.cs.nuclear.platform.pojo
 
 #druid连接池配置
-spring.datasource.url=jdbc:mysql://localhost:3306/LOER_REPORT?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/nuclearplatform?characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
@@ -14,3 +14,9 @@ spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.initial-size=10
 spring.datasource.druid.max-active=20
 spring.datasource.druid.min-idle=5
+
+
+# logback 简易配置
+# logging.path=F:\\demo
+logging.file=nuclear_platform.log
+logging.level.root=info
